# librarian

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-gitea-package.yml  deploy-package.yml  integration.yml  one-time-bandit-fix.yml  python-unittest.yml  release.yml  restore-production-hardening.yml  stable-librarian.yml
_recovery/: blob-status.txt  diagnostic.txt
benchmarks/: search_benchmark.py
deploy/systemd/: README.md
deploy/systemd/getbible-query.service.d/: limits.conf
deploy/systemd/getbible-search.service.d/: limits.conf
docs/: API_INTEGRATION.md  ARCHITECTURE.md  CACHING.md  HARDENING.md  OPERATIONS.md  README.md  RELEASE_GATE.md  RELEASING.md  SEARCH.md  USAGE.md  getbible_book_number.md  getbible_deploy_gitea.md  getbible_reference.md  getbible_scripture.md  release-gate.md
examples/: reference_selection.py  scripture_search.py
scripts/: check_release_version.py  run_release_gate.sh
src/getbible/: __init__.py  _keyed_locks.py  errors.py  exceptions.py  getbible.py  getbible_book_number.py  getbible_reference.py  getbible_reference_trie.py  hardened.py  repository_client.py  search.py  source_generation.py  translation_cache.py  trie_node.py
src/getbible/data/: aleppo.json  almeida.json  aov.json  arabicsv.json  basque.json  bibelselskap.json  bkr.json  breton.json  cep.json  chamorro.json  cns.json  cnt.json  codex.json  coptic.json  cornilescu.json  croatia.json  cus.json  cut.json  danish.json  darby.json  easternarmenian.json  esperanto.json  estonian.json  finnish.json  giovanni.json  judson.json  karoli.json  kjv.json  korean.json  lithuanian.json  ls1910.json  maori.json  martin.json  moderngreek.json  modernhebrew.json  pyharaamattu1933.json  pyharaamattu1992.json  riveduta.json  rv1858.json  sahidic.json  (+17 more)
tests/: test_getbible.py  test_getbible_book_number.py  test_getbible_reference.py  test_hardening.py  test_live_search.py  test_operational_cache.py  test_release_hardening.py  test_repository_sources.py  test_search.py
tests/fixtures/repository/v2/: test.json
tests/fixtures/repository/v2/test/: books.json
tests/fixtures/repository/v2/test/1/: 1.json
